tests/machine/x/php/record_assign.error
line: 7
error: run error: exit status 255
PHP Fatal error:  Uncaught Error: Cannot use object of type Counter as array in /workspace/mochi/tests/machine/x/php/record_assign.php:7
Stack trace:
#0 /workspace/mochi/tests/machine/x/php/record_assign.php(19): mochi_inc()
#1 {main}
  thrown in /workspace/mochi/tests/machine/x/php/record_assign.php on line 7

   5: }
   6: 
   7: var c = Counter { n: 0 }
   8: inc(c)
   9: print(c.n)
